# milo-agent

./: .env.example  .gitignore  GETTING_STARTED.md  README.md  __init__.py  cli.py  pyproject.toml
.claude/: settings.local.json
agents/: __init__.py  base.py  browser.py  config.py  main.py  rag.py  react.py  simple.py  tool.py  tool_agent.py
cli/: __init__.py  main.py
config/: settings.py  settings.yaml
core/: __init__.py  logger.py  structured_logger.py
core/browser/: __init__.py  base.py  controller.py  tools.py
core/llm/: __init__.py  base.py  factory.py
core/llm/providers/: api.py  ollama.py
core/memory/: __init__.py  base.py  hybrid.py  long_term.py  persistent.py  scoring.py  short_term.py
core/rag/: __init__.py  base.py  document_loader.py  embeddings.py  retriever.py  text_splitter.py  tools.py  vector_store.py
core/reasoning/: __init__.py  react.py
core/tools/: __init__.py  base.py  mcp.py  mcp_example.py  registry.py  retry.py
core/tools/builtin/: __init__.py  calculator.py  code_execution.py  datetime.py  file_operations.py  random.py  weather.py  weather_search.py  web_search.py
demo_memory/: chroma.sqlite3
demos/: browser_demo.py  chat_demo.py  rag_demo.py  tool_demo.py
diagrams/: architecture.drawio  milo-agent-architecture.drawio
examples/: 01_chat_demo.py  05_browser_agent_demo.py  06_main_agent_demo.py  07_react_agent_demo.py  08_long_term_memory_demo.py  09_main_agent_phase4_demo.py  README.md
examples/advanced/: README.md  complete_agent.py  quick_start.md  test_ollama.py
examples/agents/: rag_demo.py
examples/tools/: tool_demo.py  web_search.py
skills/: README.md
tests/: test_api_provider.py  test_chat_demo.py  test_event_system.py  test_factory.py  test_llm.py  test_llm_base.py  test_memory.py  test_ollama_provider.py  test_react.py  test_react_agent.py  test_simple_agent.py  test_tools.py  test_web_search_tool.py
tui/: __init__.py  app.py  main.py  widgets.py
webui/: README.md  __init__.py  launch.py  server.py
webui/static/: index.html
