[project]
name = "milo-agent"
version = "0.1.0"
description = "A general-purpose AI Agent built from scratch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25",
    "pyyaml>=6.0",
    "rich>=13.0",  # 美化终端输出
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "agents", "config"]
