[project]
name = "milo-agent"
version = "0.1.0"
description = "A general-purpose AI Agent built from scratch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # 核心依赖：版本锁定确保稳定性
    "pydantic>=2.0,<3.0",
    "httpx>=0.25,<0.28",
    "pyyaml>=6.0,<7.0",
    "rich>=13.0,<15.0",  # 美化终端输出
    "pydantic-settings>=2.0,<3.0",  # .env 文件支持
    "python-dotenv>=1.0,<2.0",  # .env 文件加载
    "python-json-logger>=2.0,<4.0",  # JSON 格式日志
]

[project.optional-dependencies]
dev = [
    # 测试工具
    "pytest>=7.0,<9.0",
    "pytest-asyncio>=0.21,<1.0",
    "pytest-mock>=3.10,<4.0",

    # 代码质量工具
    "ruff>=0.1.0,<0.9.0",          # Fast Python linter and formatter
    "mypy>=1.5.0,<2.0",            # Static type checker

    # 测试覆盖率
    "pytest-cov>=4.0,<5.0",

    # Pre-commit hooks
    "pre-commit>=3.0,<4.0",
]

webui = [
    # Web UI 依赖
    "fastapi>=0.100.0,<0.120.0",   # Web framework
    "uvicorn>=0.23.0,<0.32.0",     # ASGI server
    "websockets>=12.0,<14.0",      # WebSocket support
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "agents", "config", "webui", "cli"]

# ====================
# 开发工具配置
# ====================

# Ruff 配置（替代 black + flake8 + isort）
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # 允许未使用的导入

# MyPy 配置
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # 暂时允许无类型定义，逐步迁移
disallow_incomplete_defs = false
check_untyped_defs = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    "ollama.*",  # 如果使用第三方库没有类型存根
    "pytest.*",
]
ignore_missing_imports = true

# Pytest 配置
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",  # 显示测试摘要
    "--ignore=tests/test_llm.py",  # 排除旧的集成测试脚本
]

# 测试覆盖率配置
[tool.coverage.run]
source = ["core", "agents", "config"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "webui/*",  # Web UI 通常是前端代码，不参与 Python 测试覆盖率
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
