[project]
name = "milo-agent"
version = "0.1.0"
description = "A general-purpose AI Agent built from scratch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # 核心依赖
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "httpx>=0.25,<0.28",
    "rich>=13.0,<15.0",
    "python-json-logger>=2.0,<4.0",

    # 内置工具依赖
    "duckduckgo-search>=6.0,<8.0",  # 网络搜索工具
]

[project.optional-dependencies]
dev = [
    # 测试工具
    "pytest>=7.0,<9.0",
    "pytest-asyncio>=0.21,<1.0",
    "pytest-mock>=3.10,<4.0",
    "pytest-cov>=4.0,<5.0",

    # 代码质量工具
    "ruff>=0.1.0,<0.9.0",
    "mypy>=1.5.0,<2.0",

    # Pre-commit hooks
    "pre-commit>=3.0,<4.0",
]

webui = [
    "fastapi>=0.100.0,<0.120.0",
    "uvicorn>=0.23.0,<0.32.0",
    "websockets>=12.0,<14.0",
]

rag = [
    # 向量数据库
    "chromadb>=0.4.0,<0.6.0",

    # 文档解析
    "pypdf>=4.0,<6.0",
    "python-docx>=1.0,<2.0",
    "openpyxl>=3.0,<4.0",
    "python-pptx>=0.6,<1.0",
    "Pillow>=10.0,<12.0",

    # Embedding（本地模型）
    "sentence-transformers>=2.2,<4.0",
    "numpy>=1.24,<3.0",
]

browser = [
    "playwright>=1.40,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "agents", "config", "webui", "cli"]

# ====================
# 开发工具配置
# ====================

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    "ollama.*",
    "pytest.*",
    "chromadb.*",
    "duckduckgo_search.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--ignore=tests/test_llm.py",
]

[tool.coverage.run]
source = ["core", "agents", "config"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "webui/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]